# twitter-stocks-Dataset

./: .dockerignore  Dockerfile  README.md  app.py  demo.py  pyproject.toml
.github/workflows/: main.yaml
NoteBook/: ml_on_notebook.ipynb  mongo_db.ipynb
artifact/07_18_2026_11_50_02/data_ingestion/data_ingestion_stored/: twitterstocks.csv
artifact/07_19_2026_10_54_20/model_training/model_evaluation/model_evaluation_report.yaml/: metrics_report.yaml
artifact/07_20_2026_10_04_32/model_pusher/: model_prediction_report.yaml
artifact/07_20_2026_10_04_32/model_training/model_evaluation/model_evaluation_report.yaml/: metrics_report.yaml
artifact/07_20_2026_10_12_17/data_transformation/: Y_test.csv
artifact/07_20_2026_10_12_17/model_training/model_evaluation/model_evaluation_report.yaml/: metrics_report.yaml
artifact/07_20_2026_11_17_29/data_ingestion/data_ingestion_stored/: twitterstocks.csv
artifact/07_20_2026_11_17_29/data_transformation/: X_test.csv  X_train.csv  Y_train.csv
artifact/07_20_2026_11_17_29/model_pusher/: model_prediction_report.yaml
artifact/07_20_2026_11_17_29/model_training/model_evaluation/model_evaluation_report.yaml/: metrics_report.yaml
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj_data.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
