[project]
name = "src"
version = "0.0.1"
discription = "A python program for time series analysis and forcasting and full on MLOPS"
authors = [
    {"name" = "Raman sarkar","email" = "ramansarkar@example.com"}
]
[tool.setuptools]
package = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}